k8s/flux/apps/switchyard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: switchyard
  annotations:
    helm.sh/resource-policy: keep
  labels:
    app: switchyard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: switchyard
  template:
    metadata:
      labels:
        app: switchyard
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 60
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 60
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: switchyard
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: switchyard
      containers:
        - name: switchyard
          image: ghcr.io/alyraffauf/switchyard-website:latest@sha256:9f2b460f89c6333546e0f5fa90efa1a379a22e9917457860f462281598c5e2d4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
