k8s/flux/apps/switchyard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: switchyard
  labels:
    app: switchyard
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "switchyard.aly.codes"
      secretName: aly-codes-tls
  rules:
    - host: "switchyard.aly.codes"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: switchyard
                port:
                  number: 80
